--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -41,22 +41,19 @@ a::hover {
 }
 
 .container p {
-    width: 90%;
     margin: 0 auto;    
     font-weight: lighter;
-    &:first-of-type {
-        // margin: 0 auto 1em auto;
-    }
 }
 
 .container h2 {
     margin-bottom: 5rem;
+    text-align: center;
 }
 
 span.emoj {
     font-size: 2em;
     width: 1em;
     display: block;
-    margin: 0 auto;
+    margin: 1em auto;
 }
 
